# Tetris-AI

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: plot_heuristics.py  plot_stats.py
src/: main.rs  tetris_game_resource.rs
src/tetris/: blocks.rs  builders.rs  core_traits.rs  core_types.rs  game.rs  game_builder.rs  mod.rs  piece.rs  srs.rs
tests/: Cargo.toml
tests/src/: lib.rs
tetris-bin/: Cargo.toml
tetris-bin/src/: args.rs  block.rs  game_runner.rs  lib.rs  main.rs  meshgrid.rs  persistance.rs  play.rs  plots.rs  stats.rs  tetris_game_resource.rs  train.rs  used_heuristics.rs
tetris-core/: Cargo.toml
tetris-core/src/: board.rs  collision.rs  core_traits.rs  direction.rs  entities.rs  game.rs  game_builder.rs  lib.rs  piece.rs  prelude.rs  scoring.rs  srs.rs
tetris-heuristics/: Cargo.toml
tetris-heuristics/src/: heuristics.rs  lib.rs  prelude.rs  used_heuristics.rs
tetris-macros/: Cargo.toml
tetris-macros/src/: lib.rs
tetris-ml/: Cargo.toml
tetris-ml/src/: agent.rs  branching_modes.rs  entity.rs  genetic_algorithm.rs  lib.rs  model_config.rs  population.rs  prelude.rs
tetris-ui/: Cargo.toml
tetris-ui/src/: lib.rs
