[workspace]
members = ["tetris-bin", "tetris-core", "tetris-heuristics", "tetris-ml"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast-possible-truncation = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = true
panic = "abort"
