[package]
name = "tetris-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clearscreen = "2.0.1"
tetris-core = { path = "../tetris-core" }
tetris-ml = { path = "../tetris-ml" }
tetris-heuristics = { path = "../tetris-heuristics" }
clap = { version = "4.4.8", features = ["derive"] }

[lints]
workspace = true
