[package]
name = "tetris-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
itertools = "0.11"
num = "0.4.1"
rand = "0.8.5"
colored = "2.0.4"

