[package]
name = "tetris-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris-core = { path = "../tetris-core" }
quote = "1.0.33"
syn = "2.0.32"
proc-macro2 = "1.0.66"
