[package]
name = "tetris-ml"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tetris-core = { path = "../tetris-core" }
tetris-heuristics = { path = "../tetris-heuristics" }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
rand = { version = "0.8.5", features = ["alloc"] }
lazy_static = "1.4.0"
clearscreen = "2.0.1"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}
